# SEC-TOPCHRONO

./: -Moha.gitignore  Python avec Microsoft.txt  README.md  agent-Moha.py  agent.py  graph.py
SRV/: deploy.sh  server.py
V3/: .gitignore  conception-agent.docx  figma.txt  lien important.txt
V3/files/: agent.py  exporters.py  risk_scorer.py
V3/v3/: .env.example  .gitignore  pyproject.toml
V3/v3-conception/: ANALYSE-V2-ET-ROADMAP-V3.md  ARCHITECTURE-V3.md  QUICK-WINS.md
V3/v3/config/: rules.yaml  settings.py
V3/v3/docker/: Dockerfile  docker-compose.yml
V3/v3/src/: __init__.py  cli.py
V3/v3/src/api/: server.py
V3/v3/src/api/routes/: health.py  reports.py  scan.py
V3/v3/src/core/: graph_client.py  logger.py  scanner.py
V3/v3/src/db/: database.py  models.py  repository.py
V3/v3/src/detection/: engine.py
V3/v3/src/detection/rules/: attachments.py  auth_headers.py  homoglyphs.py  keywords.py  sender.py  urls.py
V3/v3/src/export/: api_export.py  console.py  csv_export.py  json_export.py
V3/v3/src/scheduler/: jobs.py
V3/v3/src/scoring/: risk_scorer.py
V3/v3/tests/: conftest.py  test_detection.py  test_scoring.py
V5/: .gitignore  analyze.py  requirements.txt
V5/config/: rules.yaml
V5/src/: report.py
V5/src/detection/: engine.py
V5/src/detection/rules/: attachments.py  auth_headers.py  homoglyphs.py  keywords.py  sender.py  urls.py
V5/src/options/: secrets.py  urlscan.py  virustotal.py
V5/src/parser/: eml_parser.py
V5/src/scoring/: risk_scorer.py
files/: detection_rules.py  exporters.py  graph.py
